[package]
name = "rust_fast_cache"
version = "0.1.1"
authors = ["scarjit"]
edition = "2018"
documentation = "Caches HTTP requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.99"
serde_json = "1.0.40"
directories = "2.0.2"
parking_lot = "0.9.0"
rayon = "1.1.0"
twox-hash = "1.5.0"
num_cpus = "1.10.1"
chrono = "0.4.7"
rand = "0.7.0"
libc = "0.2.62"
number_prefix = "0.3.0"
colored = "1.8.0"
xorshift = "0.1.3"